// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClassDisplay Should render correctly with a "populated" classData property 1`] = `
<div
  className="scheduleClass"
>
  <button
    className="classLabel"
    onClick={[Function]}
  >
    <br />
     
    0
     - 
    1
  </button>
  <div
    className="timeLabel"
    style={
      Object {
        "display": "none",
      }
    }
  >
    class
    <br />
    Instructor: 
  </div>
</div>
`;

exports[`ClassDisplay Should render correctly with a null classData property 1`] = `
<div
  className="scheduleClass"
>
  <button
    className="classLabel"
    onClick={[Function]}
  >
    <br />
     
     - 
  </button>
  <div
    className="timeLabel"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <br />
    Instructor: 
  </div>
</div>
`;

exports[`ClassDisplay Should render correctly with no classData property 1`] = `
<div
  className="scheduleClass"
>
  <button
    className="classLabel"
    onClick={[Function]}
  >
    <br />
     
     - 
  </button>
  <div
    className="timeLabel"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <br />
    Instructor: 
  </div>
</div>
`;

exports[`ScheduleDisplay Should render correctly with a "populated" schedule property 1`] = `
<span
  className="scheduleOption"
>
  <ClassDisplay
    classData={Array []}
    key="class-0"
  />
  <ClassDisplay
    classData={Array []}
    key="class-1"
  />
</span>
`;

exports[`ScheduleDisplay Should render correctly with a null schedule property 1`] = `
<span
  className="scheduleOption"
/>
`;

exports[`ScheduleDisplay Should render correctly with no schedule property 1`] = `
<span
  className="scheduleOption"
/>
`;

exports[`SchedulesContainer Should render correctly with a "populated" schedules property 1`] = `
<section
  id="main"
>
  <div
    id="name"
  >
    Schedule Name:
    <input
      id="scheduleName"
      onChange={[Function]}
      placeholder="Enter Schedule Name Here"
      type="text"
    />
  </div>
  <div
    className="pdfdim"
    id="divToPrint"
  >
    <div
      className="horiz-container"
    >
      <Connect(schedulesList) />
    </div>
  </div>
  <div
    className="bottom"
  >
    <button
      onClick={[Function]}
    >
      Save As PDF
    </button>
    <button
      className="return"
      onClick={[Function]}
    >
      Return
    </button>
  </div>
</section>
`;

exports[`SchedulesContainer Should render correctly with a null schedules property 1`] = `
<section
  id="main"
>
  <div
    id="name"
  >
    Schedule Name:
    <input
      id="scheduleName"
      onChange={[Function]}
      placeholder="Enter Schedule Name Here"
      type="text"
    />
  </div>
  <div
    className="pdfdim"
    id="divToPrint"
  >
    <div
      className="horiz-container"
    >
      <Connect(schedulesList) />
    </div>
  </div>
  <div
    className="bottom"
  >
    <button
      onClick={[Function]}
    >
      Save As PDF
    </button>
    <button
      className="return"
      onClick={[Function]}
    >
      Return
    </button>
  </div>
</section>
`;

exports[`SchedulesContainer Should render correctly with no schedules property 1`] = `
<section
  id="main"
>
  <div
    id="name"
  >
    Schedule Name:
    <input
      id="scheduleName"
      onChange={[Function]}
      placeholder="Enter Schedule Name Here"
      type="text"
    />
  </div>
  <div
    className="pdfdim"
    id="divToPrint"
  >
    <div
      className="horiz-container"
    >
      <Connect(schedulesList) />
    </div>
  </div>
  <div
    className="bottom"
  >
    <button
      onClick={[Function]}
    >
      Save As PDF
    </button>
    <button
      className="return"
      onClick={[Function]}
    >
      Return
    </button>
  </div>
</section>
`;
